--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postbuild": "node d:\\web\\ayuno-intermitente\\rename.js"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
